syntax = "proto3";
package DomainServices.OfferService;
option csharp_namespace = "DomainServices.OfferService.Contracts";

import "google/protobuf/wrappers.proto";
import "GrpcDecimal.proto";
import "NullableGrpcDecimal.proto";
import "GrpcDate.proto";
import "NullableGrpcDate.proto";
import "Messages/Types.proto";

message MortgageSimulationResults {
	cis.types.GrpcDecimal LoanAmount = 1;
	int32 LoanDuration = 2;
	cis.types.NullableGrpcDate LoanDueDate = 3;
	cis.types.NullableGrpcDecimal LoanPaymentAmount = 4;
	cis.types.GrpcDecimal LoanInterestRateProvided = 5;
	google.protobuf.Int32Value EmployeeBonusLoanCode = 6;
	cis.types.GrpcDecimal LoanToValue = 7;
	cis.types.NullableGrpcDate ContractSignedDate = 8;
	cis.types.GrpcDate DrawingDateTo = 9;
	cis.types.NullableGrpcDate AnnuityPaymentsDateFrom = 10;
	google.protobuf.Int32Value AnnuityPaymentsCount = 11;
	cis.types.GrpcDecimal Aprc = 12;
	cis.types.GrpcDecimal LoanTotalAmount = 13;
	cis.types.GrpcDecimal LoanInterestRate  = 14;
	cis.types.GrpcDecimal LoanInterestRateAnnounced = 15;
	int32 LoanInterestRateAnnouncedType = 16;
	cis.types.GrpcDecimal EmployeeBonusDeviation = 17;
	cis.types.GrpcDecimal MarketingActionsDeviation = 18;

	repeated SimulationResultWarning Warnings = 19;
}
